# TrignoWireless

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: mainwindow.hpp  recording.hpp  signal_type.hpp
src/: main.cpp  mainwindow.cpp  recording.cpp
src/test/: test_iec559_and_little_endian.cpp
window/: mainwindow.ui
